2010-05-30 01:54-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Framework/English.lproj/SaveModified.gorm: Correct issues with 
	Gorm file.
	* Framework/PCSaveModified.m: Use setTitle: instead of setStringValue:
	to set the titles of the buttons.
	
2010-05-30 01:44-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Modules/Editors/ProjectCenter/PCEditor.m: Temporarily comment out
	previous change util we find the proper fix as it was preventing 
	files from being saved.

2010-03-06 Riccardo Mottola <rmottola@users.sf.net>

	* Modules\Editors\ProjectCenter\PCEditor.m: setup undo on the editor
	view

2009-11-26 Richard frith-Macdonald <rfm@gnu.org>

	* Modules/Projects/Application/Resources/AppController.m:
	* Modules/Projects/Application/Resources/main.m:
	* Modules/Projects/Application/Resources/AppController.h:
	* Modules/Projects/Tool/Resources/main.m:
	Update to conform to coding standards and to use GPL 3 as
	default copyleft.

2009-09-20 03:45-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Framework/PCMakefileFactory.m: Check if buildDir is nil before 
	generating the BUILD_DIR directive in the make file.   Sometimes
	this is coming up with (nil) on Windows which is causing the build
	phase to fail.

2009-09-19 Riccardo Mottola <rmottola@users.sf.net>

	* Images/Options.tiff:
	Added new icon, drawn by me.
	
2009-09-18 Riccardo Mottola <rmottola@users.sf.net>

	* Framework/PCProjectLauncher.m
	Use path component instead of hard-coded slash

2009-09-17  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Framework/PCMakefileFactory.m ([-createMakefileForProject:]): If
	GNUSTEP_INSTALLATION_DOMAIN is not set, do not output it.  This is
	what was already happening, but the code seemed to assume
	otherwise.

2009-09-17  Nicola Pero  <nicola.pero@meta-innovation.com>

	Old patch from Markus Hitter <mah@jump-ing.de>, updated to the
	current code:
	* Framework/PCProjectManager.m ([-openProjectAt:makeActive:]): Pop